--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
@@ -86,18 +88,18 @@
                         </div>
                         <div class="mb-3">
                             <label for="projectTechnologies" class="form-label">Technologies (comma-separated)</label>
-                            <input type="text" class="form-control" id="projectTechnologies" 
-                                   placeholder="e.g., React, Node.js, MongoDB">
+                            <input type="text" class="form-control" id="projectTechnologies"
+                                placeholder="e.g., React, Node.js, MongoDB">
                         </div>
                         <div class="mb-3">
                             <label for="projectGitHub" class="form-label">GitHub Repository URL</label>
-                            <input type="url" class="form-control" id="projectGitHub" 
-                                   placeholder="https://github.com/username/repo">
+                            <input type="url" class="form-control" id="projectGitHub"
+                                placeholder="https://github.com/username/repo">
                         </div>
                         <div class="mb-3">
                             <label for="projectScreenshot" class="form-label">Screenshot URL</label>
-                            <input type="url" class="form-control" id="projectScreenshot" 
-                                   placeholder="https://example.com/screenshot.jpg">
+                            <input type="url" class="form-control" id="projectScreenshot"
+                                placeholder="https://example.com/screenshot.jpg">
                             <small class="text-muted">Or upload a file (functionality to be implemented)</small>
                         </div>
                     </form>
@@ -122,28 +124,24 @@
                     <form id="editProjectForm">
                         <div class="mb-3">
                             <label for="editProjectTitle" class="form-label">Project Title</label>
-                            <input type="text" class="form-control" id="editProjectTitle" value="E-Commerce Platform">
+                            <input type="text" class="form-control" id="editProjectTitle" value="">
                         </div>
                         <div class="mb-3">
                             <label for="editProjectDescription" class="form-label">Description</label>
-                            <textarea class="form-control" id="editProjectDescription" rows="4">
-A full-stack e-commerce solution with payment integration, user authentication, and inventory management.
-                            </textarea>
+                            <textarea class="form-control" id="editProjectDescription" rows="4"></textarea>
                         </div>
                         <div class="mb-3">
-                            <label for="editProjectTechnologies" class="form-label">Technologies (comma-separated)</label>
-                            <input type="text" class="form-control" id="editProjectTechnologies" 
-                                   value="React, Node.js, MongoDB, Stripe API">
+                            <label for="editProjectTechnologies" class="form-label">Technologies
+                                (comma-separated)</label>
+                            <input type="text" class="form-control" id="editProjectTechnologies" value="">
                         </div>
                         <div class="mb-3">
                             <label for="editProjectGitHub" class="form-label">GitHub Repository URL</label>
-                            <input type="url" class="form-control" id="editProjectGitHub" 
-                                   value="https://github.com/johndoe/ecommerce">
+                            <input type="url" class="form-control" id="editProjectGitHub" value="">
                         </div>
                         <div class="mb-3">
                             <label for="editProjectScreenshot" class="form-label">Screenshot URL</label>
-                            <input type="url" class="form-control" id="editProjectScreenshot" 
-                                   value="https://via.placeholder.com/400x250/4a90e2/ffffff?text=E-Commerce">
+                            <input type="url" class="form-control" id="editProjectScreenshot" value="">
                         </div>
                     </form>
                 </div>
@@ -167,5 +165,5 @@ A full-stack e-commerce solution with payment integration, user authentication, 
     <!-- Custom JS -->
     <script src="js/script.js"></script>
 </body>
-</html>
 
+</html>
