--- a/documents.html
+++ b/documents.html
@@ -90,15 +90,16 @@
                     <form id="uploadDocumentForm">
                         <div class="mb-3">
                             <label for="documentTitle" class="form-label">Document Title</label>
-                            <input type="text" class="form-control" id="documentTitle" required>
+                            <input type="text" class="form-control" id="documentTitle" name="title" required>
                         </div>
                         <div class="mb-3">
                             <label for="documentDescription" class="form-label">Description (optional)</label>
-                            <textarea class="form-control" id="documentDescription" rows="3"></textarea>
+                            <textarea class="form-control" id="documentDescription" name="description"
+                                rows="3"></textarea>
                         </div>
                         <div class="mb-3">
                             <label for="documentType" class="form-label">Document Type</label>
-                            <select class="form-select" id="documentType" required>
+                            <select class="form-select" id="documentType" name="document_type" required>
                                 <option value="">Select type...</option>
                                 <option value="PDF">PDF</option>
                                 <option value="DOCX">Word Document</option>
@@ -110,9 +111,8 @@
                         </div>
                         <div class="mb-3">
                             <label for="documentFile" class="form-label">Select File</label>
-                            <input type="file" class="form-control" id="documentFile" required>
-                            <small class="text-muted">Max file size: 10MB (upload functionality to be
-                                implemented)</small>
+                            <input type="file" class="form-control" id="documentFile" name="document_file" required>
+                            <small class="text-muted">Max file size: 10MB</small>
                         </div>
                     </form>
                 </div>
@@ -134,17 +134,19 @@
                 </div>
                 <div class="modal-body">
                     <form id="editDocumentForm">
+                        <input type="hidden" id="editDocumentId" name="id">
                         <div class="mb-3">
                             <label for="editDocumentTitle" class="form-label">Document Title</label>
-                            <input type="text" class="form-control" id="editDocumentTitle" value="">
+                            <input type="text" class="form-control" id="editDocumentTitle" name="title" required>
                         </div>
                         <div class="mb-3">
                             <label for="editDocumentDescription" class="form-label">Description</label>
-                            <textarea class="form-control" id="editDocumentDescription" rows="3"></textarea>
+                            <textarea class="form-control" id="editDocumentDescription" name="description"
+                                rows="3"></textarea>
                         </div>
                         <div class="mb-3">
                             <label for="editDocumentType" class="form-label">Document Type</label>
-                            <select class="form-select" id="editDocumentType">
+                            <select class="form-select" id="editDocumentType" name="document_type">
                                 <option value="PDF">PDF</option>
                                 <option value="DOCX">Word Document</option>
                                 <option value="XLSX">Excel Spreadsheet</option>
@@ -162,7 +164,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary">Save Changes</button>
+                    <button type="button" class="btn btn-primary" onclick="saveDocumentChanges()">Save Changes</button>
                 </div>
             </div>
         </div>
@@ -178,7 +180,7 @@
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js"></script>
+    <script src="js/script.js?v=1.1"></script>
 </body>
 
 </html>
