--- a/profile.html
+++ b/profile.html
@@ -64,8 +64,8 @@
                                 </button>
                             </div>
 
-                            <h3 class="fw-bold mb-1">Loading...</h3>
-                            <p class="text-muted mb-3">Loading...</p>
+                            <h3 class="fw-bold mb-1" id="profileName">Loading...</h3>
+                            <p class="text-muted mb-3" id="profileJobTitle">Loading...</p>
 
                             <!-- GitHub Link -->
                             <div class="mb-3">
@@ -179,7 +179,108 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary">Save Changes</button>
+                    <button type="button" class="btn btn-primary" onclick="saveProfileChanges()">Save Changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Upload Photo Modal -->
+    <div class="modal fade" id="uploadPhotoModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Change Profile Picture</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="uploadPhotoForm">
+                        <input type="hidden" name="action" value="update_profile">
+                        <div class="mb-3">
+                            <label for="profilePhotoInput" class="form-label">Select Image</label>
+                            <input type="file" class="form-control" id="profilePhotoInput" name="profile_photo"
+                                accept="image/*" required>
+                            <div class="form-text">Allowed formats: JPG, PNG, GIF. Max size: 5MB.</div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="uploadProfilePhoto()">Upload</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Edit Bio Modal -->
+    <div class="modal fade" id="editBioModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Bio</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="editBioForm">
+                        <div class="mb-3">
+                            <label for="editBio" class="form-label">Bio</label>
+                            <textarea class="form-control" id="editBio" rows="5"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="saveBio()">Save Changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Edit Skills Modal -->
+    <div class="modal fade" id="editSkillsModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Skills</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="editSkillsForm">
+                        <div class="mb-3">
+                            <label for="editSkills" class="form-label">Skills (comma-separated)</label>
+                            <input type="text" class="form-control" id="editSkills"
+                                placeholder="e.g. HTML, CSS, JavaScript, PHP">
+                            <div class="form-text">Separate skills with commas</div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="saveSkills()">Save Changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Edit Contact Modal -->
+    <div class="modal fade" id="editContactModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Contact Information</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="editContactForm">
+                        <!-- Note: Email is usually immutable or requires special flow, but we'll allow viewing or simple edits if backend supports it. 
+                              Actually, profile.php doesn't seem to support email update in 'update_profile' action, only 'update_profile' logic updates basic info.
+                              Let's check profile.php later. For now, assuming standard profile fields.
+                         -->
+                        <p class="text-muted">Contact info is generated from your profile details.</p>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
@@ -195,7 +296,7 @@
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js"></script>
+    <script src="js/script.js?v=1.2"></script>
 </body>
 
 </html>
