--- a/profile.html
+++ b/profile.html
@@ -76,10 +76,26 @@
                             </div>
 
                             <!-- Edit Profile Button -->
-                            <button class="btn btn-primary w-100" data-bs-toggle="modal"
+                            <button class="btn btn-primary w-100 mb-3" data-bs-toggle="modal"
                                 data-bs-target="#editProfileModal">
                                 <i class="bi bi-pencil me-2"></i>Edit Profile
                             </button>
+
+                            <!-- CV Section -->
+                            <div class="card bg-light border-0 mb-3">
+                                <div class="card-body p-3">
+                                    <h6 class="fw-bold mb-2">
+                                        <i class="bi bi-file-earmark-person me-2 text-primary"></i>Curriculum Vitae
+                                    </h6>
+                                    <div id="cvContainer" class="text-center">
+                                        <p class="text-muted small mb-2">No CV uploaded yet</p>
+                                        <button class="btn btn-sm btn-outline-primary w-100" data-bs-toggle="modal"
+                                            data-bs-target="#uploadCVModal">
+                                            <i class="bi bi-upload me-1"></i>Upload CV
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -293,10 +309,36 @@
         </div>
     </footer>
 
+    <!-- Upload CV Modal -->
+    <div class="modal fade" id="uploadCVModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Upload Curriculum Vitae</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="uploadCVForm">
+                        <div class="mb-3">
+                            <label for="cvFile" class="form-label">Select CV File (PDF preferred)</label>
+                            <input type="file" class="form-control" id="cvFile" name="cv_file" accept=".pdf,.doc,.docx"
+                                required>
+                            <small class="text-muted">Max size: 10MB. Accepted formats: PDF, DOC, DOCX</small>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="uploadCV()">Upload</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js?v=1.2"></script>
+    <script src="js/script.js?v=1.3"></script>
 </body>
 
 </html>
