--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     talented
                     students.</p>
                 <div class="d-flex justify-content-center gap-3">
-                    <a href="register.html" class="btn btn-light btn-lg px-4 fw-bold">Join the Community</a>
+                    <a href="register.html" class="btn btn-light btn-lg px-4 fw-bold" id="joinCommunityBtn">Join the
+                        Community</a>
                     <a href="#members" class="btn btn-outline-light btn-lg px-4">Meet Members</a>
                 </div>
             </div>
@@ -126,14 +127,14 @@
     <!-- Footer -->
     <footer class="bg-dark text-white py-4 mt-auto">
         <div class="container text-center">
-            <p class="mb-0">&copy; 2024 DevShowcase. All rights reserved.</p>
+            <p class="mb-0">&copy; 2026 DevShowcase. All rights reserved.</p>
         </div>
     </footer>
 
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js?v=2.6"></script>
+    <script src="js/script.js?v=2.7"></script>
 </body>
 
 </html>
