--- a/view.html
+++ b/view.html
@@ -84,6 +84,34 @@
         </div>
     </footer>
 
+    <!-- Upload Banner Modal -->
+    <div class="modal fade" id="uploadBannerModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Change Banner Image</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="uploadBannerForm">
+                        <input type="hidden" name="action" value="update_profile">
+                        <div class="mb-3">
+                            <label for="bannerPhotoInput" class="form-label">Select Banner Image</label>
+                            <input type="file" class="form-control" id="bannerPhotoInput" name="banner_photo"
+                                accept="image/*" required>
+                            <div class="form-text">Allowed formats: JPG, PNG, GIF, WebP. Recommended: 1200x300.</div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="uploadBannerPhoto()">Upload</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
